--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jquery": "^3.5.33",
     "@types/jqueryui": "^1.12.24",
     "@types/lodash": "^4.17.20",
+    "@types/node": "^24.3.1",
     "@types/toastr": "^2.1.43",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/parser": "^8.42.0",
@@ -56,6 +57,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.5.21",
     "@vueuse/core": "^13.9.0",
     "dedent": "^1.7.0",
     "jquery": "^3.7.1",
