--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "@vue/runtime-dom": "^3.5.21",
     "@vueuse/core": "^13.9.0",
     "dedent": "^1.7.0",
+    "inversify": "^7.9.1",
     "jquery": "^3.7.1",
     "jqueryui": "^1.11.1",
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
+    "reflect-metadata": "^0.2.2",
     "toastr": "^2.1.4",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
