--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "6.0.0-dev.20250807",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
+    "vue-tsc": "^3.0.7",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1"
   },
