--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/parser": "^8.46.1",
     "autoprefixer": "^10.4.21",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
@@ -65,6 +66,7 @@
     "jquery": "^3.7.1",
     "jqueryui": "^1.11.1",
     "lodash": "^4.17.21",
+    "phaser": "^3.90.0",
     "pinia": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "toastr": "^2.1.4",
